{
    "name": "Controls",
    "maps": [
        {
            "name": "InGame",
            "id": "af89a6d8-06a9-43a6-8ef1-54a218216a33",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "PassThrough",
                    "id": "daca5b6c-a432-412b-84d0-1ecdf8ddc1df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwitchWeapon",
                    "type": "Button",
                    "id": "82883643-e670-4d86-90a5-cb2e1aa6c024",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchAmmo",
                    "type": "Button",
                    "id": "4c3ecab6-f1d6-42c1-b49d-27c37ac824d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6795d53b-4c77-4c2a-996f-1b08db15dd57",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "315dba56-de01-443c-9fc1-97b371974e71",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcd0579b-be43-4ae6-a328-3148041e19ba",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "652a05e1-8839-4b6d-bea3-6c6c8445ee76",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cf62f2d-8877-4e77-b58c-2ec631bf4663",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "239d5664-8901-4ebe-af9d-3324c6c70ae7",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchAmmo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da72e88b-7519-4c6e-a484-5a61c544761b",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchAmmo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af324188-e54c-4256-9f73-5953ee375e82",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchAmmo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ba46e1f-8682-405d-98b4-a86e0ca2021b",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchAmmo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Permenanet",
            "id": "8a05f712-4fac-43bf-82ab-5cb828d08c7b",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "PassThrough",
                    "id": "60539386-db1f-4c0d-81f0-651d7745845d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29d64221-5988-4e23-8285-35d1a567aa09",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}